SERVER-19019 prohibit mapReduce on system collections